    TODO: Higher res preset icons
    TODO: Fix issue when icon is dragged around: "sandbox extension creation failed: file system representation creation error for path"
    TODO: Make Status Items look good in Yosemite's Dark Mode: http://indiestack.com/2014/10/yosemites-dark-mode/
    TODO: Save web view output as HTML
    TODO: Save authentication password?
    TODO: Make text in web views smaller or bigger using menu items
    TODO: Fix Provide as Mac OS X service
    TODO: Support UTIs

    TODO: More examples
    TODO: Make class based system with inheritance for different output modes in ScriptExec
    * Increased text size in built-in editor
    * Updated documentation on what command line tool installs
    * Dynamic (in code) install path for CLT stuff
    * Platypus-generated apps now remember font size set by user
    * Auto-focus on app name text field on app launch

For 4.9
    * Users can now manually increase/decrease the font size in Platypus-generated apps
    * Status menu items can now be selected. This will run the script again with the menu title as an argument.
    * Arguments can now be passed to Platypus-generated apps via the command line
    * In Progress Bar output, it is now possible to use DETAILS:SHOW and DETAILS:HIDE to toggle details field visibility
    * New feature: If script prints "QUITAPP" to STDOUT, the wrapper application will quit.
    * Platypus now remembers app creation dialog settings such as "Optimize Nib"
    * Platypus now remembers opened Profiles in the Open Recent menu
    * It is now possible to add a custom MainMenu.nib to bundled files which overwrites default
    * Extended and improved documentation
    * Built with XCode 6, now requires Mac OS X 10.6 or later
    * Fixed a bug where "Provide as a Service" failed to be read from saved profiles
    * Fixed bug where a custom bundle identifier in a saved Profile would not be loaded