@@ -146,6 +146,7 @@
             <li><a href="#814">Can I pass arguments to a Platypus-generated app via the command line?</a></li>
             <li><a href="#815">Can my script control when the wrapper application quits?</a></li>
             <li><a href="#816">Where is the command line tool installed?</a></li>
+            <li><a href="#817">Can I customize the About window of a Platypus-generated app?</a></li>
         </ul>
     </li>
 </ul>
@@ -917,6 +918,14 @@ Contents/Resources/MainMenu.nib
 </code></pre>
 
 <p>These files are all removed by the Platypus CLT uninstall script.</p>
+
+<br>
+<br>
+<br>
+
+<h3 id="817">Can I customize the About window of a Platypus-generated app?</h3>
+
+<p>If you add a file named <strong>Credits.rtf</strong> or <strong>Credits.html</strong> to the bundled files list, it will be displayed in the About window of your application.</p>
 
 <br>
 <br>
